--- a/PhoneBook/Views/Home/GetData.cshtml
+++ b/PhoneBook/Views/Home/GetData.cshtml
@@ -8,9 +8,16 @@
 <div  style="text-align:center;direction:rtl;">
   <div class="card-body" style="font-family:'iran sans'; direction:rtl;text-align:right">
       @{
+    <label>نام: </label>
     <p>@ViewBag.Name</p>
+
+    <label>نام خانوادگی: </label>
     <p>@ViewBag.Family</p>
+    
+    <label>شماره تلفن: </label>
     <p>@ViewBag.Phone</p>
+    
+    <label>آدرس: </label>
     <p>@ViewBag.Address</p>
       }
   </div>
