--- a/PhoneBook/Views/Home/Index.cshtml
+++ b/PhoneBook/Views/Home/Index.cshtml
@@ -5,40 +5,17 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>    
 </div>
 
 <br />
 
 
-@*<div >
-    <form action="/Home/PostData" method="post" dir="rtl">
-    <div style="direction:rtl; text-align:right; font-family:'iran sans'">
-        <label>نام</label>
-        <input class="form-group" type="text" name="Name" placeholder="نام"  />
-
-        <label>نام خانوادگی</label>
-        <input class="form-group" type="text" name="Family" placeholder="نام خانوادگی"  />
-
-        <label>شماره تلفن</label>
-        <input class="form-group" type="text" name="Phone" placeholder="شماره تلفن"  />
-
-        <label>آدرس</label>
-        <input type="text" name="Address" placeholder="آدرس"  />
-
-        <input type="submit" value="ذخیره فرد" class="btn btn-primary" />
-    </div>
-    </form>
-</div>
-*@
-
-
-<div>
+<div style="direction:rtl; text-align:right; justify-content:right; font-family:'IRAN Sans';">
 <form  asp-action="Search" asp-controller="Home" method="get">
-    <div>
-        <input name="SearchedPerson"  class="form-control" type="text" placeholder="Search"/>
-        <input type="submit" name="Search" value="Search" class="btn btn-outline-secondary" /> 
+    <div class="mb-3">
+        <input name="SearchedPerson"  class="form-control" type="text" placeholder="جستجوی افزاد بر اساس شماره تلفن، نام، آدرس"/>
+        <input type="submit" name="Search" value="جستجو" class="form-control btn btn-outline-secondary" style="width:200px;"/> 
     </div>
 </form>
 </div>
