--- a/PhoneBook/Views/Home/Search.cshtml
+++ b/PhoneBook/Views/Home/Search.cshtml
@@ -3,11 +3,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<p class="info">People Searched</p>
 
+<div>
+
+    
+<p class="info">People Searched</p>
 <div class="col-md-5 align-content-center">
     <p>@ViewBag.Name</p>
     <p>@ViewBag.Family</p>
     <p>@ViewBag.PhoneNumber</p>
     <p>@ViewBag.Address</>
+</div>
+
+
 </div>
