--- a/PhoneBook/Views/Home/Index.cshtml
+++ b/PhoneBook/Views/Home/Index.cshtml
@@ -11,11 +11,11 @@
 <br />
 
 
-<div style="text-align:center; font-family:'IRAN Sans';">
+<div style="direction:rtl; text-align:right; font-family:'IRAN Sans';">
 <form  asp-action="Search" asp-controller="Home" method="get">
-    <div class="mb-3" style="text-align:center;">
+    <div >
         <input name="SearchedPerson"  class="form-control" type="text" placeholder="جستجوی افزاد بر اساس شماره تلفن، نام، آدرس"/>
-        <input type="submit" name="Search" value="جستجو" class="form-control btn-success " style="width:50%; padding-top:5px;"/> 
+        <input type="submit" name="Search" value="جستجو" class="form-control btn-outline-success " style="width:100%; padding-top:5px;"/> 
     </div>
 </form>
 </div>
