--- a/PhoneBook/Views/Home/Search.cshtml
+++ b/PhoneBook/Views/Home/Search.cshtml
@@ -3,17 +3,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-<div>
-
+<div style="direction:rtl; text-align:center">
     
-<p class="info">People Searched</p>
-<div class="col-md-5 align-content-center">
-    <p>@ViewBag.Name</p>
-    <p>@ViewBag.Family</p>
-    <p>@ViewBag.PhoneNumber</p>
-    <p>@ViewBag.Address</>
-</div>
-
-
+<ul class="list-group">
+  <li class="list-group-item active">@ViewBag.Name</li>
+  <li class="list-group-item">@ViewBag.Family</li>
+  <li class="list-group-item">@ViewBag.PhoneNumber</li>
+  <li class="list-group-item">@ViewBag.Address</li>
+</ul>
 </div>
