--- a/PhoneBook/Views/Home/Index.cshtml
+++ b/PhoneBook/Views/Home/Index.cshtml
@@ -15,8 +15,8 @@
         <div class="col-md-12">
             <div class="d-flex justify-content-center" style="direction:rtl;  font-family:'IRAN Sans';">
                 <form   asp-action="Search" asp-controller="Home" method="get">
-                <input style="border-radius:20px; width:90vh;" name="SearchedPerson"  class="form-control" type="text" placeholder="جستجوی افزاد بر اساس شماره تلفن، نام، آدرس"/>
-                <input style="margin-top:20px; border-radius:20px ; width:160px" type="submit" name="Search" value="جستجو" class="form-control btn btn-info m-auto"/> 
+                    <input style="border-radius:20px; width:90vh;" name="SearchedPerson"  class="form-control" type="text" placeholder="جستجوی افزاد بر اساس شماره تلفن، نام، آدرس"/>
+                    <input style="margin-top:20px; border-radius:20px ; width:160px" type="submit" name="Search" value="جستجو" class="form-control btn btn-info m-auto"/> 
                 </form>
             </div>
         </div>
@@ -24,3 +24,8 @@
 </div>
 
 
+<select class="js-example-basic-single" name="state">
+  <option value="AL">Alabama</option>
+    ...
+  <option value="WY">Wyoming</option>
+</select>
