just finished the first pages ui

--- a/PhoneBook/Views/Home/Index.cshtml
+++ b/PhoneBook/Views/Home/Index.cshtml
@@ -3,24 +3,27 @@
 }
 
 
-<div class="text-center mt-5 mb-2">
+        <br />
+        <br />
+        <br />
+        <div class="text-center mt-5 mb-2">
     <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"/>
 </div>
-
 <br />
-
-
-<div class="container">
+<div class="">
     <div class="row">
         <div class="col-md-12">
             <div class="d-flex justify-content-center" style="direction:rtl;  font-family:'IRAN Sans';">
                 <form   asp-action="Search" asp-controller="Home" method="get">
                 <input style="border-radius:20px; width:90vh;" name="SearchedPerson"  class="form-control" type="text" placeholder="جستجوی افزاد بر اساس شماره تلفن، نام، آدرس"/>
-                <input style="margin-top:20px; border-radius:20px ; width:160px" type="submit" name="Search" value="جستجو" class="form-control btn btn-info m-auto"/> 
+                <div class="d-flex justify-content-center ">
+                    <input style="" type="submit" name="Search" value="جستجو" class="search-btn btn"/> 
+                </div>
                 </form>
             </div>
         </div>
     </div>
 </div>
+
 
 
