--- a/PhoneBook/wwwroot/css/site.css
+++ b/PhoneBook/wwwroot/css/site.css
@@ -69,3 +69,10 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.search-btn {
+    border-radius: 2px;
+    margin: 10px;
+    padding: 5px 35px;
+    background-color: #EFEFEF
+}
