--- a/PhoneBook/Views/Home/Search.cshtml
+++ b/PhoneBook/Views/Home/Search.cshtml
@@ -5,9 +5,14 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
 <div dir="rtl" >
-<div class="row">
+    <div class="header">
+      <div class="d-flex justify-content-end" >
+          <input type="text" placeholder="search" class="search-page-bar" />
+           <img class="search-page-logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo"/>
+      </div>
+    </div>
+<div class="row mt-4">
 @{
     foreach(var item in Model)
     {   
@@ -16,7 +21,7 @@
                 <ul class=" list-unstyled">
                     <li>
                     <ul class="d-flex list-unstyled">
-                    <li class="namefam text-primary"><h4>@item.Family</h4></li>
+                    <li class="name text-primary"><h4>@item.Family</h4></li>
                     <li class=" text-primary"><h4>@item.Name</h4></li>
                     </ul>
                     </li>
