search page logo changed !!

--- a/PhoneBook/Views/Home/Search.cshtml
+++ b/PhoneBook/Views/Home/Search.cshtml
@@ -9,7 +9,7 @@
     <div class="header">
       <div class="d-flex justify-content-end" >
           <input type="text" placeholder="search" class="search-page-bar" />
-           <img class="search-page-logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo"/>
+          <a asp-action="index"> <img class="search-page-logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo"/></a>
       </div>
     </div>
 <div class="row mt-4">
