--- a/PhoneBook/Views/Home/Search.cshtml
+++ b/PhoneBook/Views/Home/Search.cshtml
@@ -23,8 +23,8 @@
                 <ul class=" list-unstyled">
                     <li>
                     <ul class="d-flex list-unstyled">
-                    <li class="name text-primary"><h4>@item.Family</h4></li>
-                    <li class=" text-primary"><h4>@item.Name</h4></li>
+                    <li class="main-result name "><h4>@item.Family</h4></li>
+                    <li class="main-result"><h4>@item.Name</h4></li>
                     </ul>
                     </li>
                     <li  class="align">@item.PhoneNumber</li>
