--- a/PhoneBook/wwwroot/css/site.css
+++ b/PhoneBook/wwwroot/css/site.css
@@ -75,6 +75,10 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
+.main-result h4{
+    color: #1A0DAB
+}
+
 .search-btn {
     border-radius: 2px;
     margin: 10px;
