--- a/PhoneBook/Views/Home/Index.cshtml
+++ b/PhoneBook/Views/Home/Index.cshtml
@@ -3,44 +3,22 @@
     Layout = "~/Views/Shared/_searchLayout.cshtml"; 
 }
 
-@*
-        <br />
-        <br />
-        <br />
-        <div class="text-center mt-5 mb-2">
-    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"/>
-</div>
-<br />
-<div class="">
-    <div class="row">
 
-        <div class="col-md-12">
-            <div class="d-flex justify-content-center" style="direction:rtl;  font-family:'IRAN Sans';">
-                <form   asp-action="Search" asp-controller="Home" method="get">
-                <input style="border-radius:20px; width:90vh;" name="SearchedPerson"  class="form-control" type="text" placeholder="جستجوی افزاد بر اساس شماره تلفن، نام، آدرس"/>
-                <div class="d-flex justify-content-center ">
-                    <input style="" type="submit" name="Search" value="جستجو" class="search-btn btn"/> 
-                </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>*@
 
 
     <header></header>
     <div class="main-content d-flex justify-content-center">
         <div class="content">
             <div class="logo">
-                <a href="#"><img src="img/Pmonum-logo.png" alt="Pmo-Logo"></a>
+                <a asp-action="Index"><img src="img/Pmonum-logo.png" alt="Pmo-Logo"></a>
             </div>
             <form asp-action="Search" asp-controller="Home" method="get">
                 <div class=" input-icons">
-                <a href=""><i class="fa fa-search icon"></i></a>
+                <a ><i class="fa fa-search icon "></i></a>
                 <input class="input-field" type="text" name="SearchedPerson" id="search-bar" placeholder="جستجو">
             </div>
             <div class="btn-container mt-3">
-                <button name="Search">جستجو</button>
+                <button class="point"  name="Search">جستجو</button>
             </div>
             </form>
         </div>
