--- a/PhoneBook/wwwroot/css/style.css
+++ b/PhoneBook/wwwroot/css/style.css
@@ -7,6 +7,10 @@
     font-family: iransans, sans-serif;
 }
 
+.point {
+    cursor: pointer;
+}
+
 .main-content {
     padding: 150px;
 }
@@ -25,7 +29,7 @@
 }
 
 .icon {
-    padding: 12px;
+    padding: 15px 5px 0px 0px ;
     min-width: 40px;
     color: #9AA0A6;
 }
@@ -58,3 +62,4 @@
         box-shadow: 0px 0px 2px #e9e9e9;
         border: 1px solid #cecece;
     }
+
